# ec-el-gamal-comparison

./: .gitignore  Cargo.toml  README.md
src/: alice.rs  bob.rs  lib.rs  main.rs  utils.rs
tests/: comparison.rs
