[package]
name = "ec-el-gamal-comparison"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0"
rug = {version = "1.13", features = ["serde"] }
#using a local version of scicrypt due to serde
scicrypt = {path = "../scicrypt/scicrypt"}
scicrypt-he = {path = "../scicrypt/scicrypt-he" }
scicrypt-traits = {path = "../scicrypt/scicrypt-traits" }
scicrypt-numbertheory = {path = "../scicrypt/scicrypt-numbertheory" }
#curve25519-dalek-ng = { package = "curve25519-dalek-ng", version = "4", features = ["serde"] }
curve25519-dalek = { package = "curve25519-dalek", version = "4.0.0-pre.2", features = ["serde"] }